# Scam-Website-Detection

./: README.md  app.py  background.js  content.js  generate_icons.py  manifest.json  ml_model.py  package_extension.py  popup.html  popup.js  pyproject.toml  serve_extension.py  url_features.py  utils.js  verify_package.py
